# open-prompt-compare

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: auth.py  config.py  crypto.py  database.py  deps.py  main.py
backend/app/db/: models.py
backend/app/routers/: admin.py  auth.py  judge_templates.py  model_configs.py  playground.py  projects.py  prompts.py  runs.py  test_suites.py
backend/app/schemas/: admin_user.py  auth.py  judge.py  model_config.py  project.py  prompt.py  run.py  test_suite.py
backend/app/services/: judge_engine.py  llm_gateway.py  task_runner.py  template_engine.py
backend/tests/: conftest.py  test_auth.py  test_crypto.py  test_judge_engine.py  test_llm_gateway.py  test_projects.py  test_prompts.py  test_runs.py  test_template_engine.py  test_test_suites.py
docker/: Dockerfile  docker-compose.yml
docs/superpowers/specs/: 2026-03-25-navigation-playground-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  runStatus.ts
frontend/src/api/: admin.ts  auth.ts  client.ts  judge.ts  modelConfigs.ts  playground.ts  projects.ts  prompts.ts  runs.ts  testSuites.ts
frontend/src/components/: AppLayout.tsx  CompareMatrix.tsx  JudgePanel.tsx  VariableSchemaEditor.tsx
frontend/src/pages/: AdminUsersPage.tsx  LoginPage.tsx  ModelConfigPage.tsx  NewRunPage.tsx  ProjectListPage.tsx  ProjectOverviewPage.tsx  PromptEditorPage.tsx  RunComparePage.tsx  RunHistoryPage.tsx  RunProgressPage.tsx  TestSuiteManagePage.tsx
(+1 files in other folders)
